***********************************
CHANGES IN VERSION 2.11.3

NEW FEATURES

   o 'N' is now supported in the ligation motif (for Arima Hi-C kit)

SIGNIFICANT USER-VISIBLE CHANGES

   o Update of the sparse2dense.py utils to include insulation score (Crane et al.) format

   o Update of Singularity image

***********************************
CHANGES IN VERSION 2.11.2

SIGNIFICANT USER-VISIBLE CHANGES

   o add SORT_RAM parameter to set the maximum memory per thread used by samtools.
     Default is 768M (pull request F. Reinecke)

   o update of Singularity file adding MultiQC

BUG FIXES

   o fix bug in bowtie2 cpu usage (pull request F. Reinecke)

   o Fix bug in build_contact_maps.sh when capture and allele-specific analysis are combined


***********************************
CHANGES IN VERSION 2.11.1

SIGNIFICANT USER-VISIBLE CHANGES

   o Update ice_mod source organization

BUG FIXES

   o Fix bug in mapping_2hic_fragments.py. 'dist' was not defined for filtered pairs (issue #185)

***********************************
CHANGES IN VERSION 2.11.0

NEW FEATURES

   o Improved capture-Hi-C analysis

   o Add MultiQC support for HiC-Pro (issue #144)

   o New utils: split_sparse.py allowing to split a genome-wide matrix into per-chromosome sparse matrices

SIGNIFICANT USER-VISIBLE CHANGES

   o Filtered pairs based on min/max insert/fragment size are now distinguished from the dumped pairs

   o Reads are now reported based on the 5' end and not on their middle position

   o _allValidPairs extension is now changed to .allValidpairs

   o Defulat MAPQ filter in the configuration file is now set to 10

   o Update log reports

   o Stats file per sample are not put in hic_results/stats for clarity reasons

   o GET_PROCESS_SAM now generates a bam file, instead of a sam file

   o FORMAT variable in the configuration is now deprecated as currently all sequencing data are encoded in phred33

   o Only one BED file is now generated by build_matrix (issue #158)
