@@ -1,5 +1,13 @@
 ## FAQ
 
+### Can I use HiC-Pro with the Arima Hi-C Kit ?
+
+Yes, the LIGATION_SITE variable from the configuration file can contain multiple ligation motifs (comma separated).
+Regarding the Arima kit, as there is two restiction motifs (GATC and GANT), the possible ligation motifs should be GATCGATC, GATCGANT, GANTGATC, GANTGANT.
+Leading to 25 possible ligation motifs when the 'N' are replaced by 'A', 'C', 'G', 'T'.
+Since HiC-Pro version 2.11.3, 'N' base are automatically recognized.
+For older version, please specify all possible ligation motifs.
+
 ### HiC-Pro failed. How to find what's going wrong ?
 
 A log file is generated when you run HiC-Pro. Its name is specified in the configuration file.   
